<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Impulse</string>
    <string name="driver_ID">Maxsus ID ni kiriting</string>
    <string name="str_enter_phone_num">Telefon raqamni kiriting</string>
    <string name="permission_rationale">permission_rationale</string>
    <string name="no_location_data_provided">no_location_data_provided</string>
    <string name="service_not_available">service_not_available</string>
    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="address_found">address_found</string>
    <string name="geocoder_available_no">no_geocoder_available</string>
    <string name="no_location_detected">no_location_detected</string>
    <string name="google_maps_key">AIzaSyArtvZuAVTJNY74sqLojOlnI3mQnyZGo7c</string>
    <string name="driver_name">Ism Familiyani kiriting</string>
    <string name="hospital_name">Kasalxona nomini kiriting</string>
    <string name="name">To`liq Ism :</string>
    <string name="name_id">Shtab ID :</string>
    <string name="str_enter">Kirish</string>
    <string name="phone_number">Tel raqami:</string>
    <string name="hospital">Kasalxona :</string>
    <string name="registration">Kirish tugmasi</string>
    <string name="str_registrations">Ro`yxatdan o`tish</string>
    <string name="info_call">Sizda hech qanday chaqiruv hizmati yo`q</string>
    <string name="str_licensing_organization_name">O`zbekiston Respublikasi\nSog`liqni Saqlash vazirligi</string>
    <string name="str_licensing_organization">O`zbekiston Respublikasi\nSog`liqni Saqlash vazirligining\n2022 yil 17 yanvardagi 16-sonli\n buyruq bilan tasdiqlangan\n062-raqamli tibbiy hujjat shakli</string>
    <string name="str_adress_name">Muassasa nomi</string>
    <string name="str_station_name">podstantsiya</string>
    <string name="str_calling_card">Chaqiriq kartasi</string>
    <string name="str_number_card">№ karta</string>
    <string name="str_brigade_card">TTYO brigadasi uchun davomidagi karta №</string>
    <string name="str_group">Group №</string>
    <string name="str_date">sana(kun,oy,yil)</string>
    <string name="str_all_dates">Vaqtlar :</string>
    <string name="str_acceptance_time">Qabul qilingan</string>
    <string name="str_given_time">TTb ga keltirilgan</string>
    <string name="str_reached_the_place">Joyiga yetib borgan</string>
    <string name="str_taken_hospital">Shifoxonaga yetkazilgan</string>
    <string name="str_finished_time">Yakunlangan</string>
    <string name="str_call_address">Chaqiriq manzili</string>
    <string name="str_region">Tuman</string>
    <string name="str_street">Ko`cha</string>
    <string name="str_home">Uy</string>
    <string name="str_apartment">Kvartira</string>
    <string name="str_home_number">Eshik kodi</string>
    <string name="str_phone_number">Tel raqami</string>
    <string name="str_info_password">Pasport ma`lumoti</string>
    <string name="str_patient">Bemor</string>
    <string name="str_patient_age">Yoshi</string>
    <string name="str_caller">Chaqiruvchi</string>
    <string name="str_adress">Doimiy ro`yxatda</string>
    <string name="str_reasons_call">Chaqiriq sababi</string>
    <string name="str_emergencies">Favqulotda vaziyatlar(101,102,1020)</string>
    <string name="str_mental_disorder">Es-hush buzilishi</string>
    <string name="str_fall_heightr">Jarohat(YTX),balanddan yiqilish</string>
    <string name="str_chest_pain">Ko`krak qafasidagi kuchli og`riq(yurak)</string>
    <string name="str_worsening_breathing">Nafas olishning buzilishi</string>
    <string name="str_severe_pain">Kuchli og`riq(bosh,qorin,bel sohasida)</string>
    <string name="str_epilepsy">Epilepsiya,tutqanoq xurujlari</string>
    <string name="str_pregnancy">Tug`ruq xomiladorlik patalogiyasi</string>
    <string name="str_bleeding">Qon ketish(tashqi burun,og`iz…)</string>
    <string name="str_blood_pressure">Qon bosimining keskin oshishi tushishi</string>
    <string name="str_high_temperature">Yuqori temperatura(39C dan yuqori)</string>
    <string name="str_allergy">Alergiya</string>
    <string name="str_mental_disorder_px">Psixikaning buzilishi</string>
    <string name="str_activity">Tashish,aktiv,tadbir</string>
    <string name="str_death_condition">O`lim xolatini konstatasiya qilish</string>
    <string name="str_call_brigade">Chaqiriq berilgan TTYO brigadasi</string>
    <string name="str_resuscitation">Reanimatsion</string>
    <string name="str_simple">Oddiy</string>
    <string name="str_feldsher">Feldsherlik</string>
    <string name="str_call_nerve">Psixiatrik</string>
    <string name="str_call_brigade_TTYO">TTYO brigadasi tarkibi</string>
    <string name="str_doctor">Vrach</string>
    <string name="str_name_feldsher">Feldsher</string>
    <string name="str_sanitary">Sanitar</string>
    <string name="str_dispatcher">Dispecher</string>
    <string name="str_driver">Haydovchi</string>
    <string name="str_number_bort">Bort raqami</string>
    <string name="str_distance">Masofa. km</string>
    <string name="str_ps">№ p/s</string>
    <string name="str_help_adress">Yordam korsatilgan manzil:</string>
    <string name="str_password_reference">Pasport ma`lumotlari:</string>
    <string name="str_polyclinic">Poliknika №</string>
    <string name="str_call_info">(Chaqiriq manzili bilan bir xil bo`lsa yozilmaydi)</string>
    <string name="str_patient_ttyo">TTYO kelgan vaqtda bemor</string>
    <string name="str_satisfactory">Qoniqarli</string>
    <string name="str_light">Yengil</string>
    <string name="str_average">O`rta</string>
    <string name="str_serious">Og`ir</string>
    <string name="str_very_serious">Juda og`ir</string>
    <string name="str_call_category">Chaqiriq kategoriyasi</string>
    <string name="str_operator">Operator</string>
    <string name="str_brigade">Brigada</string>
    <string name="str_first_aid">TTYO kelguncha qadar ko`rsatilgan birinchi yordam</string>
    <string name="str_not_specified">Ko`rsatilmagan</string>
    <string name="str_specified_unsatisfactory">Ko`rsatilgan(qoniqarsiz)</string>
    <string name="str_specified_satisfactory">Ko`rsatilgan(qoniqarli)</string>
    <string name="str_patient_fate">Bemor taqdiri</string>
    <string name="str_live_home">Uyda qoldirildi</string>
    <string name="str_left_place">Joyida qoldirildi</string>
    <string name="str_introduced">Tanishildi</string>
    <string name="str_delivered_hospital">Shifoxonaga yetkazildi</string>
    <string name="str_hospital_name">Shifoxona nomi</string>
    <string name="str_signature">Imzo</string>
    <string name="str_lie">Yolg`on</string>
    <string name="str_address_notfound">Manzil topilmadi</string>
    <string name="str_other_service">Boshqa TTYO xizmati</string>
    <string name="str_not_place">Joyida yo`q</string>
    <string name="str_not_victim">Jabrlangan yo`q</string>
    <string name="str_canceled">Bekor qilindi Stop №…vaqti..</string>
    <string name="str_death_toreturn">O`lim qayd etildi</string>
    <string name="str_came_aid">TTYO kelgunga qadar</string>
    <string name="str_ttyo_participation">TTYO ishtirokida(joyida)</string>
    <string name="str_transportirovka">Transportirovkada</string>
    <string name="str_participation_with">TTYO ishtirokida o`lim sababi</string>
    <string name="str_disproportionate_injury">Hayotga nomutanosib jarohat(holat,suisid)</string>
    <string name="str_acuse_disease">Kasallikning o`tkir fazilati(to`satdan)</string>
    <string name="str_phase_decompensasi">Kasallikning dekompensasiya bosqichi</string>
    <string name="str_reported">102 ga xabar berildi</string>
    <string name="str_give_time">Berilgan vaqt</string>
    <string name="str_accepted">Qabul qilingan stop №</string>
    <string name="str_accepted_person">Qabul qilgan shaxs F.I.Sh</string>
    <string name="service_already_running">Service is already running</string>
    <string name="service_start_successfully">Service started successfully</string>
    <string name="gps_enable">GPS enable</string>
    <string name="please_turn_on_gps">Please turn on GPS</string>
    <string name="ok">Ok</string>
    <string name="str_dont_account">Account mavjud emas?</string>
    <string name="str_alreardy_have_account">Siz ro`yxatdan o`tkansiz?</string>
    <string name="str_enter_page">Kirish qismi</string>
    <string name="str_registration">Ro`yxatdan o`tish</string>
    <string name="str_respiratory">1.Nafas Tizimi</string>
    <string name="str_ch_one">Vezikulyar</string>
    <string name="str_ch_two">Xansirash</string>
    <string name="str_ch_three">Susaygan</string>
    <string name="str_ch_four">Dag`al</string>
    <string name="str_ch_five">Xo`l xrillash</string>
    <string name="str_ch_six">Quruq xrillash</string>
    <string name="str_ch_seven">Agonal nafas</string>
    <string name="str_ch_eight">Apnoe</string>
    <string name="str_ch_nine">Suniy nafasda</string>
    <string name="str_ch_teen">Nafas yo`l tiniq</string>
    <string name="str_myText">2.Psixikasi</string>
    <string name="str_a_one">Meyorda</string>
    <string name="str_a_two">Qo`rquv</string>
    <string name="str_a_three">Suiqasdga moyil</string>
    <string name="str_a_four">Sekinlashga</string>
    <string name="str_a_five">Eyforiyaga xos</string>
    <string name="str_b_one">Xarakatchan notinch</string>
    <string name="str_b_two">Agressiv</string>
    <string name="str_b_three">Paranoyik</string>
    <string name="str_b_four">Qo`zg`alon</string>
    <string name="str_b_five">Depressiv</string>
    <string name="str_b_mytext">3.Yurak qon-tomir</string>
    <string name="str_c_one">Yurak tonlari bog`liq</string>
    <string name="str_c_two">Bradikardiya</string>
    <string name="str_c_three">Tasixardiya</string>
    <string name="str_c_four">Asistoliya</string>
    <string name="str_c_five">Ekstrasistoliya</string>
    <string name="str_d_one">4.EKG</string>
    <string name="str_d_two">O`zgarishsiz</string>
    <string name="str_d_three">Artimiya(xilpillovchi)</string>
    <string name="str_d_four">Paroksizmal taxikardiya</string>
    <string name="str_d_five">UKS 5T-sigment ko`tarilishi,tushishi</string>
    <string name="str_d_six">Qorincha fibrillyasiyasi</string>
    <string name="str_d_seven">Pullsiz aktivlik</string>
    <string name="str_e_one">5.Teri Qoplami</string>
    <string name="str_e_two">Toza</string>
    <string name="str_e_three">Quruq</string>
    <string name="str_e_four">Rangpar</string>
    <string name="str_e_five">Sianotik</string>
    <string name="str_e_six">Toshmali</string>
    <string name="str_e_seven">Shishgan</string>
    <string name="str_f_one">6.Nevrologiya</string>
    <string name="str_f_two">Gemiplegiya</string>
    <string name="str_f_three">Paraplegiya</string>
    <string name="str_f_four">Tetraplegiya</string>
    <string name="str_f_five">Babinskiy musbat simptomi</string>
    <string name="str_f_six">Meningeal musbat simptomlar</string>
    <string name="str_g_one">7.Ko`z qorachiqlari</string>
    <string name="str_g_two">O`rtacha</string>
    <string name="str_g_three">Toraygan</string>
    <string name="str_g_four">Kengaygan</string>
    <string name="str_g_five">Anizokoreya</string>
    <string name="str_g_six">Fotoreaksiya</string>
    <string name="str_o_one">8.Jarohat soxasi</string>
    <string name="str_o_two">Bosh</string>
    <string name="str_o_three">Tana</string>
    <string name="str_o_four">O`ng qo`l</string>
    <string name="str_o_five">Chap qo`l</string>
    <string name="str_o_six">Chap oyoq</string>
    <string name="str_o_seven">O`ng oyoq</string>
    <string name="str_p_one">9.Glasgo shkalasi</string>
    <string name="str_p_two">Ko`zi ochiq</string>
    <string name="str_p_three">So`ralganda</string>
    <string name="str_p_four">Og`riqqa</string>
    <string name="str_p_five">Umuman ochmaydi</string>
    <string name="str_r_one">Tashxis</string>
    <string name="str_r_two">Koma xolati</string>
</resources>