<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_weight="0.2">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp"
                        android:text="@string/name_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/et_driver_ID"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/driver_ID"
                        android:inputType="numberPassword"
                        android:imeOptions="actionNext"
                        android:imeActionLabel="Next"
                        android:textSize="25sp"
                        android:ems="10"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_rounded_corners_border" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp"
                        android:text="@string/name"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/et_driver_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/driver_name"
                        android:inputType="textPersonName"
                        android:textSize="25sp"
                        android:imeOptions="actionNext"
                        android:imeActionLabel="Next"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_rounded_corners_border" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp"
                        android:text="@string/hospital"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/et_hospital"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hospital_name"
                        android:inputType="textPersonName"
                        android:textSize="25sp"
                        android:imeOptions="actionDone"
                        android:imeActionLabel="Ok"
                        android:background="@drawable/edittext_rounded_corners_border" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_marginTop="25dp"
                android:gravity="right">
                <Button
                    android:id="@+id/b_open_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_with_focus"
                    android:text="@string/registration"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:backgroundTint="@null" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>