<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/sufyan"
    tools:context=".activity.SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:gravity="center_horizontal|center_vertical">

            <ImageView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:background="@mipmap/logo"/>

            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_weight="0.3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp"
                        android:text="@string/name_id"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2">
                    
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etPasswordLayout"
                        android:layout_width="match_parent"
                        android:textColorHint="@color/white"
                        app:hintTextColor="@color/white"
                        app:counterMaxLength="25"
                        app:boxStrokeColor="@color/white"
                        app:startIconTint="@color/white"
                        app:errorTextAppearance="@style/error_appearance"
                        app:passwordToggleTint="@color/white"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_driver_ID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_rounded_corners_border"
                            android:baselineAligned="false"
                            android:textColor="@color/white"
                            android:hint="@string/driver_ID"
                            android:imeActionLabel="Next"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:textColorHint="@color/white"
                            android:textSize="22sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.3">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp"
                        android:text="@string/name"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_driver_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_rounded_corners_border"
                        android:baselineAligned="false"
                        android:textColor="@color/white"
                        android:hint="@string/driver_name"
                        android:imeActionLabel="Next"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/white"
                        android:layout_weight="1"
                        android:textSize="22sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.3">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginRight="20dp"
                        android:text="@string/hospital"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2">
                    <EditText
                        android:id="@+id/et_hospital"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hospital_name"
                        android:inputType="textPersonName"
                        android:textSize="22sp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:imeOptions="actionDone"
                        android:imeActionLabel="Ok"
                        android:background="@drawable/edittext_rounded_corners_border" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="200dp"
                android:orientation="horizontal">
<!--                <LinearLayout-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:layout_marginTop="25dp"-->
<!--                    android:gravity="bottom"-->
<!--                    android:layout_height="match_parent">-->
<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/str_donnot_account"-->
<!--                        android:textSize="16sp"-->
<!--                        android:textColor="@color/white"/>-->

<!--                    <TextView-->
<!--                        android:id="@+id/tv_signup"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/str_registration"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textStyle="bold"-->
<!--                        android:layout_marginLeft="10dp"-->
<!--                        android:textColor="@color/white"/>-->
<!--                </LinearLayout>-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_weight=".4"
                    android:orientation="vertical"
                    android:gravity="right">
                    <Button
                        android:id="@+id/b_open_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/button_with_focus"
                        android:text="@string/registration"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:backgroundTint="@null" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>